--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -210,6 +210,7 @@ log-level info
 # default port is 853
 # server-tls 8.8.8.8
 # server-tls 1.0.0.1
+server 8.8.8.8
 
 # remote https dns server list
 # server-https https://[host]:[port]/path [-blacklist-ip] [-whitelist-ip] [-spki-pin [sha256-pin]] [-group [group] ...] [-exclude-default-group]
