--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -54,7 +54,7 @@ bind-cert-file /etc/smartdns/fullchain.pem
 bind-cert-key-file /etc/smartdns/privkey.pem
 
 bind [::]:53
-bind-https 0.0.0.0:443
+bind-tls 0.0.0.0:853
 
 # tcp connection idle timeout
 # tcp-idle-time [second]
@@ -189,7 +189,7 @@ log-level info
 #   -proxy [proxy-name]: use proxy to connect to server.
 #   -bootstrap-dns: set as bootstrap dns server.
 # server 8.8.8.8 -blacklist-ip -check-edns -group g1 -group g2
-# server tls://dns.google:853 
+# server tls://dns.google:853
 # server https://dns.google/dns-query
 
 # remote tcp dns server list
